# available-GZ_FDN_EMS

./: README.md  main.py  pyproject.toml  requirements.txt  startup.py
backend/apps/authentication/: filters.py  models.py  schemas.py  urls.py  views.py
backend/apps/pdn/: admin.py  apps.py  models.py  urls.py  views.py
backend/apps/pdn/demo_data/: extract_case33bw.py
backend/apps/pdn/migrations/: 0001_initial.py  0002_alter_branchdata_options_alter_busdata_options_and_more.py
backend/backend/: settings.py  urls.py
conf/: common.ini
docs/: nicegui获取当前页面的标题.md
frontend/: dialogs.py  echarts.py  errors.py  exceptions.py  i18n.py  main.py  models.py  services.py  settings.py  typeddicts.py  utils.py
frontend/components/: global_error_dialog.py
frontend/demo_data/: dashboard_daily_summary.csv  dashboard_hourly_curve.csv  dimension_scores.csv  hourly_region_pv.csv  indicator_scores.csv  pf_bus_voltages.csv  pf_line_loading.csv  pv_region_distribution.csv
frontend/migrations/models/: 0_20250819072852_init.py
frontend/pages/: __init__.py  home.py  login.py  multi_dimensional_evaluation.py  photovoltaic_bearing_capacity.py  power_flow_calculation.py  system_overview.py  topology_structure.py
frontend/tests/: line_area_style.html  line_gradient.html  test_2.py  test_3.py  tests.py  线路负载率_热力进度条.html
frontend/ui/: .readme
frontend/ui/pages/: .readme  __init__.py  home.py  multi_dimensional_evaluation.py  photovoltaic_bearing_capacity.py  power_flow_calculation.py  system_overview.py  topology_structure.py
tests/: test_1.py
tools/: 通过链接下载文件.py
